--- a/index.html
+++ b/index.html
@@ -4,7 +4,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Habit Re:coder - Transform Your Life</title>
+    <link rel="icon" type="image/x-icon" href="logo.ico">
     <style>
+
         * {
             margin: 0;
             padding: 0;
