--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
         .btn { width: 100%; padding: 15px 30px; border-radius: 50px; font-size: 18px; font-weight: 600; border: none; cursor: pointer; transition: all 0.3s ease; text-align: center; }
         .btn-primary { background: linear-gradient(135deg, #667eea 0%, #764ba2 100%); color: white; }
         .btn-primary:hover { transform: scale(1.02); box-shadow: 0 10px 30px rgba(102,126,234,0.4); }
-        .btn-secondary { background: transparent; color: #667eea; border: 2px solid #667eea; margin-top: 10px; }
+        .btn-secondary { background: transparent; color: #667eea; border: 2px solid #667eea; margin-top: 20px; display:block; text-align:center; }
         .btn-secondary:hover { background: #f0f0f0; }
         .warning-box { background: #fff3cd; border: 2px solid #ffc107; border-radius: 10px; padding: 20px; margin: 20px 0; }
         .warning-box h3 { margin: 0 0 10px 0; color: #856404; font-size: 18px; }
@@ -62,15 +62,7 @@
 
         <div class="card">
             <h2>💻 Desktop App - 100% Offline & Private</h2>
-            <ul class="features">
-                <li>Works completely offline - no internet needed after download</li>
-                <li>Complete privacy - all data stays on YOUR computer</li>
-                <li>No account required - start using immediately</li>
-                <li>Lightning fast - no web delays</li>
-                <li>Free forever - no subscriptions or hidden fees</li>
-                <li>AI-ready reports for personalized insights</li>
-                <li>Track habits, journal, and build streaks</li>
-            </ul>
+            <!-- features removed as requested -->
 
             <div class="email-form">
                 <h3>📧 Get Habit Re:coder + Pro Tips</h3>
