Update email address in footer

--- a/index.html
+++ b/index.html
@@ -104,4 +104,4 @@
 
         <div class="footer">
             <p>Made with ❤️ by an indie developer</p>
-            <p style="font-size:14px; margin-top:10px;">Questions? Email: has
+            <p style="font-size:14px; margin-top:10px;">Questions? Email: hasan.alatrash87@gmail.com
