--- a/download.html
+++ b/download.html
@@ -85,7 +85,7 @@
         </p>
         
         <!-- REPLACE THIS WITH YOUR GOOGLE DRIVE LINK -->
-        <a href="YOUR_GOOGLE_DRIVE_DOWNLOAD_LINK" class="btn" download>
+        <a href="https://drive.google.com/file/d/1ig5_KsUQRcfLle8uHIYNP8T9ywlSQgBv/view?usp=sharing" class="btn" download>
             📥 Download Habit Re:coder
         </a>
         
@@ -103,7 +103,7 @@
     <script>
         // Auto-download after 2 seconds
         setTimeout(function() {
-            window.location.href = 'https://drive.google.com/uc?export=download&id=1C3TFXsF4_zvStlOZVuT8SFUJumGlOp6X';
+            window.location.href = 'https://drive.google.com/file/d/1ig5_KsUQRcfLle8uHIYNP8T9ywlSQgBv/view?usp=sharing';
         }, 2000);
     </script>
 </body>
